--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "types": "lib/rough-notation.d.ts",
   "scripts": {
     "build": "rm -rf lib && tsc && rollup -c",
+    "prepare": "rm -rf lib && tsc && rollup -c",
     "lint": "tslint -p tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
